--- a/trunk/Perseus.Win32/Perseus.Win32.csproj
+++ b/trunk/Perseus.Win32/Perseus.Win32.csproj
@@ -35,6 +35,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
@@ -42,7 +43,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FullScreenDetector.cs" />
     <Compile Include="Registry.cs" />
+    <Compile Include="Shared.cs" />
     <Compile Include="ShellIconSize.cs" />
     <Compile Include="Shell.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
