--- a/Perseus.Scripting.Lua/Perseus.Scripting.Lua.csproj
+++ b/Perseus.Scripting.Lua/Perseus.Scripting.Lua.csproj
@@ -53,9 +53,8 @@
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="LuaInterface, Version=2.0.0.16708, Culture=neutral, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\Perseus Stuff\SVN\Executioner\Executioner\bin\Release\LuaInterface.dll</HintPath>
+    <Reference Include="LuaInterface">
+      <HintPath>.\LuaInterface.dll</HintPath>
     </Reference>
     <Reference Include="PresentationCore">
       <RequiredTargetFramework>3.0</RequiredTargetFramework>
