--- a/trunk/Perseus/Perseus.csproj
+++ b/trunk/Perseus/Perseus.csproj
@@ -53,6 +53,7 @@
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -64,6 +65,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bit.cs" />
+    <Compile Include="PCrypt.cs" />
     <Compile Include="PEnvironment.cs" />
     <Compile Include="PInput.cs" />
     <Compile Include="PIO.cs" />
