--- a/trunk/Perseus.Scripting.Lua/Perseus.Scripting.Lua.csproj
+++ b/trunk/Perseus.Scripting.Lua/Perseus.Scripting.Lua.csproj
@@ -89,6 +89,12 @@
       <Install>true</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Perseus\Perseus.csproj">
+      <Project>{7BFE48E3-02D0-4F1D-A415-CBB02A2A1164}</Project>
+      <Name>Perseus</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
